# Sandbox-Prototype

./: CMakeLists.txt  README.md  compile-shaders-linux.sh  compile-shaders-macos.sh  compile-shaders-win.bat  run.sh
cmake/: superbuild.cmake
lib/: CMakeLists.txt
src/: main.cpp  main2.cpp
